--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       src="https://kit.fontawesome.com/d2747108de.js"
       crossorigin="anonymous"></script>
 
-    <title>Backroads App || Tour Company</title>
+    <title>Backroads App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
