--- a/public/index.html
+++ b/public/index.html
@@ -28,13 +28,13 @@
       src="https://kit.fontawesome.com/d2747108de.js"
       crossorigin="anonymous"></script>
 
-    <title>Backroads App</title>
+    <title>Backroads App || Tour Company</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
-      This HTML file is a template.
+      This HTML file is a template.git 
       If you open it directly in the browser, you will see an empty page.
 
       You can add webfonts, meta tags, or analytics to this file.
